--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -9,8 +9,8 @@ submissions:
     github repo link: https://github.com/brantwellman/brantwellman.github.io
     url (if hosted live): http://brantwellman.github.io/
   Name:'Brenna Martenson'
-    github repo link: 
-    url (if hosted live): 
+    github repo link: https://github.com/martensonbj/martensonbj.github.io
+    url (if hosted live): http://martensonbj.github.io/
   Name:'Dan Winter'
     github repo link: https://github.com/danjwinter/danjwinter.github.io
     url (if hosted live): http://danjwinter.github.io/
