--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -8,7 +8,7 @@ submissions:
   Name:'Brenna Martenson'
     url: 
   Name:'Dan Winter'
-    url: 
+    url: https://github.com/danjwinter/task_manager
   Name:'Beth Secor'
     url: 
   Name:'Greg Armstrong'
