added GregoryArmstrong repo link to personal blog

--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -1,7 +1,7 @@
 submissions:
   Name:'Aaron Greenspan'
-    github repo link: 
-    url (if hosted live): 
+    github repo link:
+    url (if hosted live):
   Name:'Beth Sebian'
     github repo link: https://github.com/bethsebian/bethsebian.github.io
     url (if hosted live): http://bethsebian.github.io/
@@ -18,17 +18,17 @@ submissions:
     github repo link: https://github.com/bethsecor/bethsecor.github.io
     url (if hosted live): http://bethsecor.github.io/
   Name:'Greg Armstrong'
-    github repo link: 
-    url (if hosted live): 
+    github repo link: https://github.com/GregoryArmstrong/PersonalBlog
+    url (if hosted live):
   Name:'Hector Huertas Baeza'
-    github repo link: 
-    url (if hosted live): 
+    github repo link:
+    url (if hosted live):
   Name:'James Crockett'
-    github repo link: 
-    url (if hosted live): 
+    github repo link:
+    url (if hosted live):
   Name:'Jordan Lawler'
-    github repo link: 
-    url (if hosted live): 
+    github repo link:
+    url (if hosted live):
   Name:'Joseph Perry'
     github repo link: https://github.com/jwperry/jwperry.github.io
     url (if hosted live): http://jwperry.github.io/
@@ -45,7 +45,7 @@ submissions:
     github repo link: https://github.com/SteveOscar/SteveOscar.github.io
     url (if hosted live): http://steveoscar.github.io/
   Name:'Taylor Moore'
-    github repo link: 
+    github repo link:
     url (if hosted live):
   Name:'Toni Rib'
     github repo link: https://github.com/ToniRib/personal-blog
