--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -24,8 +24,8 @@ submissions:
     github repo link:
     url (if hosted live):
   Name:'James Crockett'
-    github repo link:
-    url (if hosted live):
+    github repo link: https://github.com/jecrockett/jecrockett.github.io
+    url (if hosted live): http://jecrockett.github.io
   Name:'Jordan Lawler'
     github repo link:
     url (if hosted live):
