--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -45,8 +45,8 @@ submissions:
     github repo link: https://github.com/SteveOscar/SteveOscar.github.io
     url (if hosted live): http://steveoscar.github.io/
   Name:'Taylor Moore'
-    github repo link:
-    url (if hosted live):
+    github repo link: http://github.com/tman22/tman22.github.io
+    url (if hosted live):http://tman22.github.io
   Name:'Toni Rib'
     github repo link: https://github.com/ToniRib/personal-blog
     url (if hosted live): http://tonirib.github.io/personal-blog/
