--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -16,7 +16,7 @@ submissions:
   Name:'Hector Huertas Baeza'
     url: 
   Name:'James Crockett'
-    url: 
+    url: https://github.com/jecrockett/task_manager
   Name:'Jordan Lawler'
     url: 
   Name:'Joseph Perry'
