--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -21,8 +21,8 @@ submissions:
     github repo link: https://github.com/GregoryArmstrong/PersonalBlog
     url (if hosted live):
   Name:'Hector Huertas Baeza'
-    github repo link:
-    url (if hosted live):
+    github repo link: https://github.com/hectorhuertas/hectorhuertas.github.io
+    url (if hosted live): http://hectorhuertas.github.io/
   Name:'James Crockett'
     github repo link: https://github.com/jecrockett/jecrockett.github.io
     url (if hosted live): http://jecrockett.github.io
