--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -14,7 +14,7 @@ submissions:
   Name:'Greg Armstrong'
     url: 
   Name:'Hector Huertas Baeza'
-    url: 
+    url: https://github.com/hectorhuertas/task_manager
   Name:'James Crockett'
     url: 
   Name:'Jordan Lawler'
