--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -4,7 +4,7 @@ submissions:
   Name:'Beth Sebian'
     url: 
   Name:'Brant Wellman'
-    url: 
+    url: https://github.com/brantwellman/Turing-task-manager
   Name:'Brenna Martenson'
     url: 
   Name:'Dan Winter'
