add beth secor's task manager

--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -10,7 +10,7 @@ submissions:
   Name:'Dan Winter'
     url: https://github.com/danjwinter/task_manager
   Name:'Beth Secor'
-    url: 
+    url: https://github.com/bethsecor/task_manager
   Name:'Greg Armstrong'
     url: 
   Name:'Hector Huertas Baeza'
