Add gh url for Beth Sebian

--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -2,7 +2,7 @@ submissions:
   Name:'Aaron Greenspan'
     url: 
   Name:'Beth Sebian'
-    url: 
+    url: https://github.com/bethsebian/task_manager
   Name:'Brant Wellman'
     url: 
   Name:'Brenna Martenson'
