--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -27,8 +27,8 @@ submissions:
     github repo link: https://github.com/jecrockett/jecrockett.github.io
     url (if hosted live): http://jecrockett.github.io
   Name:'Jordan Lawler'
-    github repo link:
-    url (if hosted live):
+    github repo link: https://github.com/Jlawlzz/jlawlzz.github.io
+    url (if hosted live):http://jlawlzz.github.io/
   Name:'Joseph Perry'
     github repo link: https://github.com/jwperry/jwperry.github.io
     url (if hosted live): http://jwperry.github.io/
