--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -18,7 +18,7 @@ submissions:
   Name:'James Crockett'
     url: 
   Name:'Jordan Lawler'
-    url: 
+    url: https://github.com/Jlawlzz/task_manager
   Name:'Joseph Perry'
     url: 
   Name:'Lenny Myerson'
