--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -5,7 +5,7 @@ submissions:
   Beth Sebian:
     repo:
   Brant Wellman:
-    repo:
+    repo: https://github.com/brantwellman/Turing-Robot-World
   Brenna Martenson:
     repo:
   Dan Winter:
