--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -29,7 +29,7 @@ submissions:
   Steve Pentler:
     repo:
   Steven Olson:
-    repo:
+    repo: https://github.com/SteveOscar/skill-inventory-crud
   Taylor Moore:
     repo:
   Toni Rib:
