add beth secor's skill inventory

--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -11,7 +11,7 @@ submissions:
   Dan Winter:
     repo:
   Beth Secor:
-    repo:
+    repo: https://github.com/bethsecor/skill-inventory-crud
   Greg Armstrong:
     repo:
   Hector Huertas:
