--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -9,7 +9,7 @@ submissions:
   Brenna Martenson:
     repo:
   Dan Winter:
-    repo:
+    repo: https://github.com/danjwinter/robot_world
   Beth Secor:
     repo: https://github.com/bethsecor/skill-inventory-crud
   Greg Armstrong:
