added link to robot_world for GregoryArmstrong

--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -13,7 +13,7 @@ submissions:
   Beth Secor:
     repo: https://github.com/bethsecor/skill-inventory-crud
   Greg Armstrong:
-    repo:
+    repo: https://github.com/GregoryArmstrong/robot_world
   Hector Huertas:
     repo:
   James Crockett:
