--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -25,7 +25,7 @@ submissions:
   Lenny Myerson:
     repo:
   Penney Garrett:
-    repo:
+    repo: https://github.com/PenneyGadget/skill-inventory-crud
   Steve Pentler:
     repo:
   Steven Olson:
