--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -17,7 +17,7 @@ submissions:
   Hector Huertas:
     repo:
   James Crockett:
-    repo:
+    repo: https://github.com/jecrockett/skill-inventory-crud
   Jordan Lawler:
     repo:
   Joseph Perry:
