--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -27,7 +27,7 @@ submissions:
   Penney Garrett:
     repo:
   Steve Pentler:
-    repo:
+    repo: https://github.com/stevepentler/Skill-Inventory
   Steven Olson:
     repo: https://github.com/SteveOscar/skill-inventory-crud
   Taylor Moore:
