--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -23,7 +23,7 @@ submissions:
   Joseph Perry:
     repo:
   Lenny Myerson:
-    repo:
+    repo: https://github.com/TheObtuseAutodidact/skill-inventory-crud
   Penney Garrett:
     repo:
   Steve Pentler:
