--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -3,7 +3,7 @@ submissions:
   Aaron Greenspan:
     repo:
   Beth Sebian:
-    repo:
+    repo: https://github.com/bethsebian/robot_world
   Brant Wellman:
     repo: https://github.com/brantwellman/Turing-Robot-World
   Brenna Martenson:
