--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -7,7 +7,7 @@ submissions:
   Brant Wellman:
     repo: https://github.com/brantwellman/Turing-Robot-World
   Brenna Martenson:
-    repo:
+    repo: https://github.com/martensonbj/skill-inventory-crud
   Dan Winter:
     repo: https://github.com/danjwinter/robot_world
   Beth Secor:
