--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -15,7 +15,7 @@ submissions:
   Greg Armstrong:
     repo: https://github.com/GregoryArmstrong/robot_world
   Hector Huertas:
-    repo:
+    repo: https://github.com/hectorhuertas/robot_world
   James Crockett:
     repo: https://github.com/jecrockett/skill-inventory-crud
   Jordan Lawler:
