--- a/1510/task_manager_transformation.yml
+++ b/1510/task_manager_transformation.yml
@@ -31,6 +31,6 @@ submissions:
   Steven Olson:
     repo: https://github.com/SteveOscar/skill-inventory-crud
   Taylor Moore:
-    repo:
+    repo: https://github.com/Tman22/skill-inventory-crud
   Toni Rib:
     repo: https://github.com/ToniRib/robot_world
