--- a/1508/rales_engine.yml
+++ b/1508/rales_engine.yml
@@ -135,13 +135,13 @@ submissions:
     queries:
   Nicole Hall:
     repo:
-    instructor:
-    notes:
-    completion:
-    test-driven-development:
-    code-quality:
-    api-design:
-    queries:
+    instructor: Josh M.
+    notes: The toughest business logic wasn't complete so some of the other categories were lacking.
+    completion: 2: Project completes most requirements but fails 10 to 6 spec harness tests.
+    test-driven-development: 3: Project demonstrates high test coverage (>80%) and tests at the controller and unit levels.
+    code-quality: 3: Project demonstrates solid code quality and MVC principles.
+    api-design: 3: Project uses strong and consistent data formats throughout, while relying mostly on standard Rails JSON features.
+    queries: : 3: Project makes good use of ActiveRecord, but drops to ruby enumerables for some query methods.
   Pat Wey:
     repo:
     instructor:
