--- a/1508/rales_engine.yml
+++ b/1508/rales_engine.yml
@@ -46,13 +46,13 @@ submissions:
     queries:
   Jason Pilz:
     repo:
-    instructor:
-    notes:
+    instructor: Josh M.
+    notes: Solid project. Some queries there was a little confusion about but the queries themselves were solid. Hashes used to format instead of serializers.
     completion: 3: Project completes most requirements but fails 5 or fewer spec harness tests.
-    test-driven-development:
-    code-quality:
-    api-design:
-    queries:
+    test-driven-development: 4: Project demonstrates high test coverage (>90%) and tests at the controller and unit levels.
+    code-quality: 3: Project demonstrates solid code quality and MVC principles.
+    api-design: 3: Project uses strong and consistent data formats throughout, while relying mostly on standard Rails JSON features.
+    queries: 4: Project makes great use of ActiveRecord relationships and queries, including some advanced query functionality such as joins and includes.
   Jerrod Paul Junker:
     repo:
     instructor:
@@ -198,13 +198,13 @@ submissions:
     queries: 4: Project makes great use of ActiveRecord relationships and queries, including some advanced query functionality such as joins and includes.
   Torie Warren:
     repo:
-    instructor:
-    notes:
-    completion:
-    test-driven-development:
-    code-quality:
-    api-design:
-    queries:
+    instructor: Josh M.
+    notes: Really solid project. Great testing. Some queries could have been better, however there's a clear trajectory of improvment. Several queries were really clean and showed an understanding of advanced AR concepts.
+    completion: 3: Project completes most requirements but fails 5 or fewer spec harness tests.
+    test-driven-development: 4: Project demonstrates high test coverage (>90%) and tests at the controller and unit levels.
+    code-quality: 3: Project demonstrates solid code quality and MVC principles.
+    api-design: 3: Project uses strong and consistent data formats throughout, while relying mostly on standard Rails JSON features.
+    queries: 4: Project makes great use of ActiveRecord relationships and queries, including some advanced query functionality such as joins and includes.
   Tyler Komoroske:
     repo:
     completion:
