--- a/1508/self-directed.yml
+++ b/1508/self-directed.yml
@@ -30,15 +30,15 @@ submissions:
     user-experience:
     performance:
   Edgar Duran:
-    repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    repo: https://github.com/edgarduran/playlist_planner
+    instructor: Tess
+    notes: Changed email last night. Got it fixed while we were together
+    completion: 3
+    organization: 3
+    test-driven-development: 3
+    code-quality: 3
+    user-experience: 3
+    performance: 4
   Emily Dowdle:
     repo:
     instructor:
