--- a/1508/self-directed.yml
+++ b/1508/self-directed.yml
@@ -21,14 +21,14 @@ submissions:
     performance:
   Amber Crawford:
     repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    instructor: Josh M.
+    notes: Solid project. Great use of abstractions. Created an internal API to consume from AJAX calls. Used background workers to consume Trelora API.
+    completion: 3: Developer completed all the user stories and requirements set by the client.
+    organization: 3: Developer used a project management tool to keep their project organized.
+    test-driven-development: 3: Project shows adequate testing (90% - 95% coverage).
+    code-quality: 4: Project demonstrates exceptionally well factored code.
+    user-experience: 4: Project exhibits a production-ready and polished UX.
+    performance: 4: Project pages load on average under 300 milliseconds.
   Edgar Duran:
     repo:
     instructor:
@@ -81,14 +81,14 @@ submissions:
     performance: 2: Project pages load on average under 500 milliseconds.
   Jill Donohue:
     repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    instructor: Josh M.
+    notes: Solid project. Great use of abstractions. Created an internal API to consume from AJAX calls. Used background workers to consume Trelora API.
+    completion: 3: Developer completed all the user stories and requirements set by the client.
+    organization: 3: Developer used a project management tool to keep their project organized.
+    test-driven-development: 3: Project shows adequate testing (90% - 95% coverage).
+    code-quality: 4: Project demonstrates exceptionally well factored code.
+    user-experience: 4: Project exhibits a production-ready and polished UX.
+    performance: 4: Project pages load on average under 300 milliseconds.
   John Slota:
     repo:
     instructor:
