--- a/1508/self-directed.yml
+++ b/1508/self-directed.yml
@@ -50,15 +50,15 @@ submissions:
     user-experience: 4
     performance: 4
   Jason Pilz:
-    repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    repo: https://github.com/jasonpilz/autolizer
+    instructor: Tess
+    notes: Great app. Needs to fix the background images for larger screens.
+    completion: 3
+    organization: 4
+    test-driven-development: 4
+    code-quality: 3
+    user-experience: 3
+    performance: 4
   Jerrod Paul Junker:
     repo:
     instructor:
