--- a/1508/self-directed.yml
+++ b/1508/self-directed.yml
@@ -180,15 +180,15 @@ submissions:
     user-experience:
     performance:
   Ross Edfort:
-    repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    repo: https://github.com/rossedfort/git_better_graphs
+    instructor: Tess
+    notes: Great UX, very polished app. Lagged bad on large repos
+    completion: 3.5
+    organization: 3
+    test-driven-development: 3
+    code-quality: 4
+    user-experience: 4
+    performance: 3
   Ryan Johnson:
     repo:
     instructor:
