--- a/1508/self-directed.yml
+++ b/1508/self-directed.yml
@@ -91,14 +91,14 @@ submissions:
     performance: 4: Project pages load on average under 300 milliseconds.
   John Slota:
     repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    instructor: Josh M.
+    notes: Overall good. Good use of services and creation of a Parser class. Could have split apart methods into separate parser classes to make for more clear classes. Some of the Ruby implementation was reaching for not ideal enumerables.
+    completion: 3: Developer completed all the user stories and requirements set by the client.
+    organization: 3: Developer used a project management tool to keep their project organized.
+    test-driven-development: 3: Project shows adequate testing (90% - 95% coverage).
+    code-quality: 2: Project demonstrates some gaps in code quality and/or application of MVC principles.
+    user-experience: 3: Project exhibits a production-ready user experience.
+    performance: 4: Project pages load on average under 300 milliseconds.
   Justin Pease:
     repo:
     instructor:
@@ -231,11 +231,11 @@ submissions:
     performance:
   Tyler Komoroske:
     repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    instructor: Josh M.
+    notes: Overall good. Good use of services and creation of a Parser class. Could have split apart methods into separate parser classes to make for more clear classes. Some of the Ruby implementation was reaching for not ideal enumerables.
+    completion: 3: Developer completed all the user stories and requirements set by the client.
+    organization: 3: Developer used a project management tool to keep their project organized.
+    test-driven-development: 3: Project shows adequate testing (90% - 95% coverage).
+    code-quality: 2: Project demonstrates some gaps in code quality and/or application of MVC principles.
+    user-experience: 3: Project exhibits a production-ready user experience.
+    performance: 4: Project pages load on average under 300 milliseconds.
