--- a/1508/self-directed.yml
+++ b/1508/self-directed.yml
@@ -140,15 +140,15 @@ submissions:
     user-experience:
     performance:
   Michael Wong:
-    repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    repo: https://github.com/Kealii/wasting_steam
+    instructor: Tess
+    notes: Nice to see works for large accounts. 
+    completion: 3
+    organization: 3
+    test-driven-development: 3
+    code-quality: 3
+    user-experience: 4
+    performance: 3
   Nicole Hall:
     repo:
     instructor:
