--- a/1508/self-directed.yml
+++ b/1508/self-directed.yml
@@ -111,14 +111,14 @@ submissions:
     performance:
   Marlo Major:
     repo:
-    instructor:
+    instructor: Josh M.
     notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    completion: 4: Developer completed all the user stories and requirements set by the client in timely manner.
+    organization: 3: Developer used a project management tool to keep their project organized.
+    test-driven-development: 4: Project shows exceptional use of testing at different layers (above 95% coverage).
+    code-quality: 4: Project demonstrates exceptionally well factored code.
+    user-experience: 3: Project exhibits a production-ready user experience.
+    performance: 3: Project pages load on average under 400 milliseconds.
   Matt Rooney:
     repo:
     instructor:
@@ -171,14 +171,14 @@ submissions:
     performance:
   Robbie Lane:
     repo:
-    instructor:
+    instructor: Josh M.
     notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    completion: 4: Developer completed all the user stories and requirements set by the client in timely manner.
+    organization: 3: Developer used a project management tool to keep their project organized.
+    test-driven-development: 4: Project shows exceptional use of testing at different layers (above 95% coverage).
+    code-quality: 4: Project demonstrates exceptionally well factored code.
+    user-experience: 3: Project exhibits a production-ready user experience.
+    performance: 3: Project pages load on average under 400 milliseconds.
   Ross Edfort:
     repo:
     instructor:
