--- a/1508/self-directed.yml
+++ b/1508/self-directed.yml
@@ -11,14 +11,14 @@ submissions:
     performance: 2: Project pages load on average under 500 milliseconds.
   Adam Jensen:
     repo:
-    instructor:
+    instructor: Josh M.
     notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    completion: 4: Developer completed all the user stories and requirements set by the client in timely manner.
+    organization: 3: Developer used a project management tool to keep their project organized.
+    test-driven-development: 4: Project shows exceptional use of testing at different layers (above 95% coverage).
+    code-quality: 3: Project demonstrates solid code quality and MVC principles.
+    user-experience: 3: Project exhibits a production-ready user experience.
+    performance: 3: Project pages load on average under 400 milliseconds.
   Amber Crawford:
     repo:
     instructor: Josh M.
@@ -162,7 +162,7 @@ submissions:
   Pat Wey:
     repo: https://github/patwey/corkboard
     instructor: Tess
-    notes: Great polished app. 
+    notes: Great polished app.
     completion: 4
     organization: 4
     test-driven-development: 3
@@ -202,7 +202,7 @@ submissions:
   Sekhar Paladugu:
     repo: https://github.com/sekharp/kids-catalog
     instructor: Tess
-    notes: 
+    notes:
     completion: 3
     organization: 3
     test-driven-development: 4
