Matt Rooney - Pass

--- a/1508/self-directed.yml
+++ b/1508/self-directed.yml
@@ -120,15 +120,15 @@ submissions:
     user-experience: 3: Project exhibits a production-ready user experience.
     performance: 3: Project pages load on average under 400 milliseconds.
   Matt Rooney:
-    repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    repo: https://github.com/mattrooney/koncert
+    instructor: Tess
+    notes: Great job of last minute pulling api calls into ajax
+    completion: 3.5
+    organization: 4
+    test-driven-development: 3
+    code-quality: 3
+    user-experience: 3
+    performance: 3
   Matt Stjernholm:
     repo: https://github.com/matt-stj/snow_alert
     instructor: Tess
