--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -6,7 +6,7 @@ submisssions:
   Name: 'Admir Draganovic'
     github repo link:
   Name: 'Adrienne Domingus'
-    github repo link:
+    github repo link: https://github.com/adriennedomingus/web_guesser
   Name: 'Alireza Andersen'
     github repo link:
   Name: 'Allan Blair'
