--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -16,7 +16,7 @@ submisssions:
   Name: 'Brian Rippeto'
     github repo link:
   Name: 'Charles Ellison'
-    github repo link:
+    github repo link: https://github.com/chadellison/web-g-
   Name: 'Chelsea Johnson'
     github repo link:
   Name: 'David Whitaker'
