--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -10,7 +10,7 @@ submisssions:
   Name: 'Alireza Andersen'
     github repo link:
   Name: 'Allan Blair'
-    github repo link:
+    github repo link: https://github.com/amaxwellblair/web_guesser.git
   Name: 'Brennan Holtzclaw'
     github repo link:
   Name: 'Brian Rippeto'
