--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -48,7 +48,7 @@ submisssions:
   Name: 'Nate Venn'
     github repo link:
   Name: 'Nicholas Dorans'
-    github repo link:
+    github repo link: https://github.com/NickyBobby/web-guesser
   Name: 'Nick Weiland'
     github repo link:
   Name: 'Scott Firestone'
