--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -20,7 +20,7 @@ submisssions:
   Name: 'Chelsea Johnson'
     github repo link:
   Name: 'David Whitaker'
-    github repo link:
+    github repo link: https://github.com/damwhit/web_guesser
   Name: 'Deborah Hamel'
     github repo link:
   Name: 'Erinna Chen'
