--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -1,6 +1,6 @@
 submisssions:
   Name: 'Adam Hundley'
-    github repo link:
+    github repo link: https://github.com/adamhundley/web_guesser.git
   Name: 'Alexis Navarrete'
     github repo link:
   Name: 'Admir Draganovic'
