--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -28,7 +28,7 @@ submisssions:
   Name: 'Gurusundesh Khalsa'
     github repo link:
   Name: 'Hedy Woo'
-    github repo link:
+    github repo link:https://github.com/thePaulista/web_guesser.git
   Name: 'Heidi Hoopes'
     github repo link:
   Name: 'Julian Feliciano'
