--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -34,7 +34,7 @@ submisssions:
   Name: 'Julian Feliciano'
     github repo link:
   Name: 'July Tran'
-    github repo link:
+    github repo link:https://github.com/julyytran/web_guesser
   Name: 'Kimiko Kano'
     github repo link:
   Name: 'Marina Corona'
