--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -13,7 +13,7 @@ submisssions:
     github repo link: https://github.com/amaxwellblair/web_guesser.git
   Name: 'Brennan Holtzclaw'
     github repo link: https://github.com/brennanholtzclaw/webguesser
-  Name: 'Brian Rippeto'
+  Name: 'Brian Rippeto' https://github.com/brianrip/web_guesser
     github repo link:
   Name: 'Charles Ellison'
     github repo link: https://github.com/chadellison/web-g-
@@ -55,3 +55,4 @@ submisssions:
     github repo link:
   Name: 'Thomas Pickett'
     github repo link:
+  
