--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -76,7 +76,7 @@ submisssions:
     url:
   Name: 'Nick Weiland'
     github repo link:
-    url:
+    url: weilandia.github.io
   Name: 'Scott Firestone'
     github repo link:
     url:
