--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -24,7 +24,7 @@ submisssions:
   Name: 'Deborah Hamel'
     github repo link:
   Name: 'Erinna Chen'
-    github repo link:
+    github repo link: https://github.com/erinnachen/task_manager
   Name: 'Gurusundesh Khalsa'
     github repo link:
   Name: 'Hedy Woo'
