--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -32,7 +32,7 @@ submisssions:
   Name: 'Heidi Hoopes'
     github repo link:
   Name: 'Julian Feliciano'
-    github repo link:
+    github repo link: https://github.com/julsfelic/web_guesser
   Name: 'July Tran'
     github repo link:
   Name: 'Kimiko Kano'
