--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -52,7 +52,7 @@ submisssions:
   Name: 'Nick Weiland'
     github repo link:
   Name: 'Scott Firestone'
-    github repo link:
+    github repo link: https://github.com/scottfirestone/web_guesser
   Name: 'Thomas Pickett'
     github repo link:
   
