Add NW web guesser

--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -75,7 +75,7 @@ submisssions:
     github repo link:
     url:
   Name: 'Nick Weiland'
-    github repo link:
+    github repo link: https://github.com/weilandia/weilandia.github.io
     url: weilandia.github.io
   Name: 'Scott Firestone'
     github repo link:
