--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -13,8 +13,8 @@ submisssions:
     github repo link: https://github.com/amaxwellblair/web_guesser.git
   Name: 'Brennan Holtzclaw'
     github repo link: https://github.com/brennanholtzclaw/webguesser
-  Name: 'Brian Rippeto' https://github.com/brianrip/web_guesser
-    github repo link:
+  Name: 'Brian Rippeto' 
+    github repo link: https://github.com/brianrip/web_guesser
   Name: 'Charles Ellison'
     github repo link: https://github.com/chadellison/web-g-
   Name: 'Chelsea Johnson'
