Add Adrienne's links

--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -9,8 +9,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Adrienne Domingus'
-    github repo link:
-    url:
+    github repo link: https://github.com/adriennedomingus/adriennedomingus.github.io
+    url: http://adriennedomingus.github.io/
   Name: 'Alireza Andersen'
     github repo link:
     url:
