--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -44,7 +44,7 @@ submisssions:
   Name: 'Matt DesMarteau'
     github repo link:
   Name: 'Matt Packer'
-    github repo link:
+    github repo link: https://github.com/matthewrpacker/web_guesser.git
   Name: 'Nate Venn'
     github repo link: https://github.com/natevenn/web_guesser
   Name: 'Nicholas Dorans'
