Add Heidi Hoopes

--- a/1511/module_2_prep/webguesser.yml
+++ b/1511/module_2_prep/webguesser.yml
@@ -24,7 +24,7 @@ submisssions:
   Name: 'Hedy Woo'
     github repo link:https://github.com/thePaulista/web_guesser.git
   Name: 'Heidi Hoopes'
-    github repo link:
+    github repo link: https://github.com/hhoopes/web_guesser
   Name: 'Julian Feliciano'
     github repo link: https://github.com/julsfelic/web_guesser
   Name: 'July Tran'
