Add NW task manager

--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -50,7 +50,7 @@ submisssions:
   Name: 'Nicholas Dorans'
     github repo link:
   Name: 'Nick Weiland'
-    github repo link:
+    github repo link: https://github.com/weilandia/task_manager
   Name: 'Scott Firestone'
     github repo link:
   Name: 'Thomas Pickett'
