--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -36,8 +36,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Erinna Chen'
-    github repo link:
-    url:
+    github repo link: https://github.com/erinnachen/erinnachen.github.io
+    url: http://erinnachen.github.io/
   Name: 'Gurusundesh Khalsa'
     github repo link:
     url:
