--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -36,7 +36,7 @@ submisssions:
   Name: 'July Tran'
     github repo link: https://github.com/julyytran/task_manager
   Name: 'Kimiko Kano'
-    github repo link:
+    github repo link: https://github.com/ksk5280/task_manager
   Name: 'Marina Corona'
     github repo link:
   Name: 'Matt Pindell'
