--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -48,8 +48,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Julian Feliciano'
-    github repo link:
-    url:
+    github repo link: https://github.com/julsfelic/julsfelic.github.io
+    url: http://julsfelic.github.com
   Name: 'July Tran'
     github repo link:
     url:
