added link to repo and url for blog

--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -30,8 +30,8 @@ submisssions:
     github repo link:
     url:
   Name: 'David Whitaker'
-    github repo link:
-    url:
+    github repo link: https://github.com/damwhit/damwhit.github.io
+    url: http://damwhit.github.io
   Name: 'Deborah Hamel'
     github repo link:
     url:
