--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -78,8 +78,8 @@ submisssions:
     github repo link: https://github.com/weilandia/weilandia.github.io
     url: weilandia.github.io
   Name: 'Scott Firestone'
-    github repo link:
-    url:
+    github repo link: https://github.com/scottfirestone/scottfirestone.github.io
+    url: scottfirestone.github.io
   Name: 'Thomas Pickett'
     github repo link:
     url:
