--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -24,8 +24,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Charles Ellison'
-    github repo link:
-    url:
+    github repo link: https://github.com/chadellison/chadellison.github.io
+    url: http://chadellison.github.io
   Name: 'Chelsea Johnson'
     github repo link:
     url:
