--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -69,8 +69,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Nate Venn'
-    github repo link:
-    url:
+    github repo link: https://github.com/natevenn/natevenn.github.io
+    url: natevenn.github.io
   Name: 'Nicholas Dorans'
     github repo link:
     url:
