--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -42,7 +42,7 @@ submisssions:
     github repo link:
     url:
   Name: 'Hedy Woo'
-    github repo link:
+    github repo link:http://thepaulista.github.io/yabl
     url:
   Name: 'Heidi Hoopes'
     github repo link:
