Adrienne task_manager repo

--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -6,7 +6,7 @@ submisssions:
   Name: 'Admir Draganovic'
     github repo link:
   Name: 'Adrienne Domingus'
-    github repo link:
+    github repo link: https://github.com/adriennedomingus/task_manager
   Name: 'Alireza Andersen'
     github repo link:
   Name: 'Allan Blair'
