--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -51,8 +51,8 @@ submisssions:
     github repo link: https://github.com/julsfelic/julsfelic.github.io
     url: http://julsfelic.github.com
   Name: 'July Tran'
-    github repo link:
-    url:
+    github repo link: https://github.com/julyytran/julyytran.github.io
+    url: http://julyytran.github.io/
   Name: 'Kimiko Kano'
     github repo link:
     url:
