--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -72,8 +72,8 @@ submisssions:
     github repo link: https://github.com/natevenn/natevenn.github.io
     url: natevenn.github.io
   Name: 'Nicholas Dorans'
-    github repo link:
-    url:
+    github repo link: https://github.com/NickyBobby/nickybobby.github.io.git
+    url: nickybobby.github.io
   Name: 'Nick Weiland'
     github repo link: https://github.com/weilandia/weilandia.github.io
     url: weilandia.github.io
