added personal blog links

--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -27,8 +27,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Chelsea Johnson'
-    github repo link:
-    url:
+    github repo link: https://github.com/cheljoh/cheljoh.github.io
+    url: http://cheljoh.github.io
   Name: 'David Whitaker'
     github repo link:
     url:
