--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -3,8 +3,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Alexis Navarrete'
-    github repo link:
-    url:
+    github repo link: https://github.com/Salvi6God/salvi6god.github.io
+    url: http://salvi6god.github.io/
   Name: 'Admir Draganovic'
     github repo link:https://github.com/Draganovic/draganovic.github.io
     url:https://Draganovic.github.io
