Add Heidi Hoopes

--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -45,8 +45,8 @@ submisssions:
     github repo link:http://thepaulista.github.io/yabl
     url:
   Name: 'Heidi Hoopes'
-    github repo link:
-    url:
+    github repo link: https://github.com/hhoopes/hhoopes.github.io
+    url: http://hhoopes.github.io
   Name: 'Julian Feliciano'
     github repo link: https://github.com/julsfelic/julsfelic.github.io
     url: http://julsfelic.github.com
