--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -21,8 +21,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Brian Rippeto'
-    github repo link:
-    url:
+    github repo link: https://github.com/brianrip/brianrip.github.io.git
+    url: http://brianrip.github.io
   Name: 'Charles Ellison'
     github repo link: https://github.com/chadellison/chadellison.github.io
     url: http://chadellison.github.io
