--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -2,7 +2,7 @@ submisssions:
   Name: 'Adam Hundley'
     github repo link:
   Name: 'Alexis Navarrete'
-    github repo link:
+    github repo link: https://github.com/Salvi6God/task_manager
   Name: 'Admir Draganovic'
     github repo link:
   Name: 'Adrienne Domingus'
