--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -54,8 +54,8 @@ submisssions:
     github repo link: https://github.com/julyytran/julyytran.github.io
     url: http://julyytran.github.io/
   Name: 'Kimiko Kano'
-    github repo link:
-    url:
+    github repo link: https://github.com/ksk5280/ksk5280.github.io
+    url: https://ksk5280.github.io/
   Name: 'Marina Corona'
     github repo link:
     url:
