--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -48,7 +48,7 @@ submisssions:
   Name: 'Nate Venn'
     github repo link:
   Name: 'Nicholas Dorans'
-    github repo link:
+    github repo link: https://github.com/NickyBobby/task_manager.git
   Name: 'Nick Weiland'
     github repo link: https://github.com/weilandia/task_manager
   Name: 'Scott Firestone'
