Adding my Blog!

--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -15,8 +15,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Allan Blair'
-    github repo link:
-    url:
+    github repo link: https://github.com/amaxwellblair/blog.git
+    url: www.amaxwellblair.com
   Name: 'Brennan Holtzclaw'
     github repo link:
     url:
