--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -52,6 +52,6 @@ submisssions:
   Name: 'Nick Weiland'
     github repo link: https://github.com/weilandia/task_manager
   Name: 'Scott Firestone'
-    github repo link:
+    github repo link: https://github.com/scottfirestone/task_manager
   Name: 'Thomas Pickett'
     github repo link:
