--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -6,8 +6,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Admir Draganovic'
-    github repo link:https://github.com/Draganovic/draganovic.github.io
-    url:https://Draganovic.github.io
+    github repo link: https://github.com/Draganovic/draganovic.github.io
+    url: https://Draganovic.github.io
   Name: 'Adrienne Domingus'
     github repo link: https://github.com/adriennedomingus/adriennedomingus.github.io
     url: http://adriennedomingus.github.io/
@@ -18,8 +18,8 @@ submisssions:
     github repo link:
     url:
   Name: 'Brennan Holtzclaw'
-    github repo link:
-    url:
+    github repo link: https://github.com/brennanholtzclaw/brennanholtzclaw.github.io
+    url: http://brennanholtzclaw.github.io
   Name: 'Brian Rippeto'
     github repo link:
     url:
