--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -28,7 +28,7 @@ submisssions:
   Name: 'Gurusundesh Khalsa'
     github repo link:
   Name: 'Hedy Woo'
-    github repo link:
+    github repo link: https://github.com/thePaulista/task_manager
   Name: 'Heidi Hoopes'
     github repo link:
   Name: 'Julian Feliciano'
