--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -46,7 +46,7 @@ submisssions:
   Name: 'Matt Packer'
     github repo link:
   Name: 'Nate Venn'
-    github repo link:
+    github repo link: https://github.com/natevenn/task_manager
   Name: 'Nicholas Dorans'
     github repo link:
   Name: 'Nick Weiland'
