--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -32,7 +32,7 @@ submisssions:
   Name: 'Heidi Hoopes'
     github repo link:
   Name: 'Julian Feliciano'
-    github repo link:
+    github repo link: https://github.com/julsfelic/task_manager
   Name: 'July Tran'
     github repo link: https://github.com/julyytran/task_manager
   Name: 'Kimiko Kano'
