added task manager link

--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -18,7 +18,7 @@ submisssions:
   Name: 'Charles Ellison'
     github repo link:
   Name: 'Chelsea Johnson'
-    github repo link:
+    github repo link: https://github.com/cheljoh/task_manager
   Name: 'David Whitaker'
     github repo link:
   Name: 'Deborah Hamel'
