--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -4,7 +4,7 @@ submisssions:
   Name: 'Alexis Navarrete'
     github repo link:
   Name: 'Admir Draganovic'
-    github repo link:
+    github repo link: https://github.com/draganovic/task_manager
   Name: 'Adrienne Domingus'
     github repo link: https://github.com/adriennedomingus/task_manager
   Name: 'Alireza Andersen'
