--- a/1511/module_2_prep/personal-html-css.yml
+++ b/1511/module_2_prep/personal-html-css.yml
@@ -1,7 +1,7 @@
 submisssions:
   Name: 'Adam Hundley'
-    github repo link:
-    url:
+    github repo link: https://github.com/adamhundley/adamhundley.github.io
+    url: http://adamhundley.github.io
   Name: 'Alexis Navarrete'
     github repo link:
     url:
