--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -14,7 +14,7 @@ submisssions:
   Name: 'Brennan Holtzclaw'
     github repo link:
   Name: 'Brian Rippeto'
-    github repo link:
+    github repo link: https://github.com/brianrip/task_manager
   Name: 'Charles Ellison'
     github repo link:
   Name: 'Chelsea Johnson'
