Add Heidi Hoopes

--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -30,7 +30,7 @@ submisssions:
   Name: 'Hedy Woo'
     github repo link:
   Name: 'Heidi Hoopes'
-    github repo link:
+    github repo link: https://github.com/hhoopes/task_manager
   Name: 'Julian Feliciano'
     github repo link:
   Name: 'July Tran'
