--- a/1511/module_2_prep/task-manager.yml
+++ b/1511/module_2_prep/task-manager.yml
@@ -1,6 +1,6 @@
 submisssions:
   Name: 'Adam Hundley'
-    github repo link:
+    github repo link: https://github.com/adamhundley/task_manager
   Name: 'Alexis Navarrete'
     github repo link:
   Name: 'Admir Draganovic'
