--- a/1511/sinatra_crud.yml
+++ b/1511/sinatra_crud.yml
@@ -26,7 +26,7 @@ submisssions:
   Name: 'Hedy Woo'
     repo: 
   Name: 'Heidi Hoopes'
-    repo: 
+    repo: https://github.com/hhoopes/golem_yard
   Name: 'Julian Feliciano'
     repo: 
   Name: 'July Tran'
